Working on the decoding for a video file

--- a/src/reactor/CMakeLists.txt
+++ b/src/reactor/CMakeLists.txt
@@ -20,6 +20,8 @@ set(REACTOR_LIBRARIES ${REACTOR_LIBRARIES} ${FFMPEG_LIBRARIES})
 #	---------------------------------------------------------------------------------------
 
 set(SOURCES	
+	VideoState.h
+
 	VideoFileReader.cpp
 	VideoFileReader.h
 )
